--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,8 +139,8 @@
     width: 100%;
     height: 100%; 
     background-color: rgba(0, 0, 0, 0.5);
-  }
-  .modal-content {
+}
+.modal-content {
     position: relative; 
     background-color: lightgray;
     padding: 60px; 
@@ -150,52 +150,57 @@
     font-size: 20px;
     animation-name: animatetop;
     animation-duration: 0.4s
-  }
-  @keyframes animatetop {
+}
+@keyframes animatetop {
     from {top:-300px; opacity:0} 
     to {top:0; opacity:1}
-  }
-  .p-modal-content{
+}
+.p-modal-content{
       font-size: 35px;
       color: #008000;
-  }
-  .close-btn {
+}
+.close-btn {
     float: right; 
     color: red; 
     font-size: 24px;  
     font-weight: bold;
-  }
-  .close-btn:hover {
+}
+.close-btn:hover {
     color: darkgray;
     cursor: pointer;
-  }
-  .modal-calendar{
+}
+.modal-calendar{
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    column-gap: 0px;
-    row-gap: 0px;
-  }
-  .button-calendar{
+}
+.button-calendar{
     width: 20px;
     height: 20px;
     margin-left: 5px ;
     background-color: #008000;
     border-radius: 10px;
-  }
-  .button-calendar:hover {
+}
+.button-calendar:hover {
     cursor: pointer;
-    background-color: red;
-  }
-  .pofdate{
-      width: 130px;
-      height: 70px;
-      margin: 0;
-      color:  #008000;
-      border: 1px solid;
-      background-color: gray;
-  }
-  .pofcontent{
-      color: red;
-      font-size: 14px;
-      text-align: center;
-  }
+    background-color: lawngreen;
+}
+.pofdate{
+    width: 130px;
+    height: 70px;
+    margin: 0;
+    color:  #008000;
+    border: 1px solid;
+    background-color: gray;
+    display: flex;
+}
+.pofcontent,
+.daynotice{
+    margin-top: 25px;
+    color: lawngreen;
+    font-size: 14px;
+    text-align: center;
+}
+.daynumber{
+    color: lawngreen;
+    margin: 0;
+}
